--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.1",
+    "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
