--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.1",
     "vee-validate": "^2.0.8",
