--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-theme": "^2.0.1",
+    "element-ui": "^2.3.7",
     "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.1",
     "vee-validate": "^2.0.8",
@@ -30,6 +32,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "element-theme-chalk": "^2.3.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
