--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "element-theme": "^2.0.1",
     "element-ui": "^2.3.7",
+    "markdown-it": "^8.4.1",
     "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.1",
     "vee-validate": "^2.0.8",
