--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass-loader": "^7.0.1",
     "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
